# serializer version: 1
# name: test_mb_enrichment_task_called_after_envelope_closes_its_failure_is_not_recorded
  list([
    dict({
      'completed_at_is_set': False,
      'kind': 'progress',
      'progress_data': dict({
        'current_item': '',
        'processed': 0,
        'total': 0,
      }),
      'status': 'running',
      'task_type': 'library_enrichment',
    }),
    dict({
      'category': 'enrichment',
      'details': dict({
        'batch_count': 0,
        'recording_count': 0,
        'release_count': 0,
      }),
      'kind': 'log',
      'level': 'INFO',
      'message': 'enrichment_started',
    }),
    dict({
      'completed_at_is_set': True,
      'kind': 'progress',
      'progress_data': dict({
        'enriched': 0,
        'failed': 0,
        'processed': 0,
        'total': 0,
      }),
      'status': 'completed',
      'task_type': 'library_enrichment',
    }),
    dict({
      'category': 'enrichment',
      'details': dict({
        'enriched': 0,
        'failed': 0,
      }),
      'kind': 'log',
      'level': 'INFO',
      'message': 'enrichment_completed',
    }),
  ])
# ---
# name: test_mid_run_exception_reports_failed_with_partial_progress
  list([
    dict({
      'completed_at_is_set': False,
      'kind': 'progress',
      'progress_data': dict({
        'current_item': '',
        'processed': 0,
        'total': 2,
      }),
      'status': 'running',
      'task_type': 'library_enrichment',
    }),
    dict({
      'category': 'enrichment',
      'details': dict({
        'batch_count': 0,
        'recording_count': 0,
        'release_count': 2,
      }),
      'kind': 'log',
      'level': 'INFO',
      'message': 'enrichment_started',
    }),
    dict({
      'completed_at_is_set': False,
      'kind': 'progress',
      'progress_data': dict({
        'current_item': 'release:r1',
        'processed': 1,
        'total': 2,
      }),
      'status': 'running',
      'task_type': 'library_enrichment',
    }),
    dict({
      'completed_at_is_set': True,
      'kind': 'progress',
      'progress_data': dict({
        'error': 'boom mid-run',
        'processed': 1,
        'total': 2,
      }),
      'status': 'failed',
      'task_type': 'library_enrichment',
    }),
    dict({
      'category': 'enrichment',
      'details': dict({
        'error': 'boom mid-run',
        'traceback': '<TRACEBACK>',
      }),
      'kind': 'log',
      'level': 'ERROR',
      'message': 'enrichment_failed',
    }),
  ])
# ---
# name: test_success_with_periodic_rows_full_envelope_sequence
  list([
    dict({
      'completed_at_is_set': False,
      'kind': 'progress',
      'progress_data': dict({
        'current_item': '',
        'processed': 0,
        'total': 2,
      }),
      'status': 'running',
      'task_type': 'library_enrichment',
    }),
    dict({
      'category': 'enrichment',
      'details': dict({
        'batch_count': 0,
        'recording_count': 1,
        'release_count': 1,
      }),
      'kind': 'log',
      'level': 'INFO',
      'message': 'enrichment_started',
    }),
    dict({
      'completed_at_is_set': False,
      'kind': 'progress',
      'progress_data': dict({
        'current_item': 'release:r1',
        'processed': 1,
        'total': 2,
      }),
      'status': 'running',
      'task_type': 'library_enrichment',
    }),
    dict({
      'completed_at_is_set': False,
      'kind': 'progress',
      'progress_data': dict({
        'current_item': 'recording:rec1',
        'processed': 2,
        'total': 2,
      }),
      'status': 'running',
      'task_type': 'library_enrichment',
    }),
    dict({
      'completed_at_is_set': True,
      'kind': 'progress',
      'progress_data': dict({
        'enriched': 2,
        'failed': 0,
        'processed': 2,
        'total': 2,
      }),
      'status': 'completed',
      'task_type': 'library_enrichment',
    }),
    dict({
      'category': 'enrichment',
      'details': dict({
        'enriched': 2,
        'failed': 0,
      }),
      'kind': 'log',
      'level': 'INFO',
      'message': 'enrichment_completed',
    }),
  ])
# ---
# name: test_telemetry_write_failure_on_periodic_upsert_still_reraises_and_records_failed
  list([
    dict({
      'completed_at_is_set': False,
      'kind': 'progress',
      'progress_data': dict({
        'current_item': '',
        'processed': 0,
        'total': 1,
      }),
      'status': 'running',
      'task_type': 'library_enrichment',
    }),
    dict({
      'category': 'enrichment',
      'details': dict({
        'batch_count': 0,
        'recording_count': 0,
        'release_count': 1,
      }),
      'kind': 'log',
      'level': 'INFO',
      'message': 'enrichment_started',
    }),
    dict({
      'completed_at_is_set': True,
      'kind': 'progress',
      'progress_data': dict({
        'error': 'simulated telemetry write failure',
        'processed': 1,
        'total': 1,
      }),
      'status': 'failed',
      'task_type': 'library_enrichment',
    }),
    dict({
      'category': 'enrichment',
      'details': dict({
        'error': 'simulated telemetry write failure',
        'traceback': '<TRACEBACK>',
      }),
      'kind': 'log',
      'level': 'ERROR',
      'message': 'enrichment_failed',
    }),
  ])
# ---
